--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "appwrite": "^11.0.0",
+    "argon2": "^0.30.3",
     "cors": "^2.8.5",
     "dotenv": "^16.1.3",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
-    "mongoose": "^7.2.2"
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.2.2",
+    "node-appwrite": "^9.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
