--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.2",
-    "node-appwrite": "^9.0.0"
+    "node-appwrite": "^9.0.0",
+    "openai": "^3.2.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
