--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "license": "ISC",
   "dependencies": {
     "argon2": "^0.30.3",
+    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.1.3",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.0",
+    "mailtrap": "^3.1.1",
     "mongoose": "^7.2.2",
     "node-appwrite": "^9.0.0",
     "openai": "^3.2.1"
