--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "mailtrap": "^3.1.1",
     "mongoose": "^7.2.2",
     "node-appwrite": "^9.0.0",
+    "node-cron": "^3.0.2",
+    "node-schedule": "^2.1.1",
+    "nodemailer": "^6.9.3",
     "openai": "^3.2.1"
   },
   "devDependencies": {
